<resources>
    <string name="app_name">MercedesBenzApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pappasitos_s_cantina">Papasitos\'s Cantina</string>
    <string name="_770_541_6100">(770) 541-6100</string>
    <string name="price">$$</string>
    <string name="_2917_state_st_carlsbad">2917 State St, Carlsbad</string>
    <string name="userName">Yanni L.</string>
    <string name="date">2016-08-29 00:41:13</string>
    <string name="review">Went back again to this place since the last time i visited the bay area 5 months ago, and nothing has changed. Still the sketchy Mission, Still the cashier…</string>
</resources>