<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="7dp"
    android:padding="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageViewRestaurant"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@mipmap/ic_launcher_round"
            android:contentDescription="@string/app_name" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/pappasitos_s_cantina"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/_770_541_6100"
                android:textSize="15sp"
                android:textStyle="bold" />


            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:max="5"
                android:rating=".5"
                android:scaleX=".9"
                android:scaleY=".9"
                android:theme="@style/RatingBar"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp" />


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>